--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body>
+	<body id="body">
+		<div id="screen"></div>
 		<div id="root"></div>
 		<script type="module" src="./src/index.tsx"></script>
 	</body>
